--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./CSS/style.css">
+    <title>Home</title>
 </head>
 <body>
-    
+    <header><b>Jacob Gaskill, CMST 386</b></header>
+    <article>
+    <ul>
+       <li> <a href="./project1/">Project 1</a></li>
+       <li> <a href="./project2/">Project 2</a></li>
+       <li> <a href="./project3/">Project 3</a></li>
+       <li> <a href="./project4/">Project 4</a></li>
+    </ul>
+</article>
 </body>
 </html>
