--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header><b>Jacob Gaskill, CMST 386</b></header>
-    <article>
+    <section>
     <ul>
        <li> <a href="./project1/">Project 1</a></li>
        <li> <a href="./project2/">Project 2</a></li>
        <li> <a href="./project3/">Project 3</a></li>
        <li> <a href="./project4/">Project 4</a></li>
     </ul>
-</article>
+    </section>
 </body>
 </html>
