--- a/project1/gallery.html
+++ b/project1/gallery.html
@@ -9,11 +9,18 @@
   </head>
   <body>
     <header><b>Image Gallery</b></header>
-    <nav>
-      <a href="./project1.html">Project1</a>
-    </nav>
+    <hr />
+    <div class="navbar">
+      <a href="../index.html">Home</a>
+      <div class="dropdown">
+        <button class="dropbtn" onclick="window.location.href = 
+        '/project1/project1.html';">Project1</button>
+        <div class="dropdown-content">
+          <a href="/project1/gallery.html">Gallery</a>
+        </div>
+      </div>
+    </div>
     <h1>A Showcase of AI-Generated Art for the Aspiring Freelancer</h1>
-    <br>
     <section>
       <figure>
         <h2>#1</h2>
@@ -60,5 +67,7 @@
         <figcaption>Source: Midjourney AI</figcaption>
       </figure>
     </section>
+    <br /><br />
+    <footer>Copyright 2023 Jacob Gaskill, CMST 386</footer>
   </body>
 </html>
