--- a/project1/gallery.html
+++ b/project1/gallery.html
@@ -1,73 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <title>Gaskill Image Gallery</title>
-  </head>
-  <body>
-    <header><b>Image Gallery</b></header>
-    <hr />
-    <div class="navbar">
-      <a href="../index.html">Home</a>
-      <div class="dropdown">
-        <button class="dropbtn" onclick="window.location.href = 
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../css/style.css">
+        <title>Gaskill Image Gallery</title>
+    </head>
+    <body>
+        <header>
+            <b>Image Gallery</b>
+        </header>
+        <hr>
+        <div class="navbar">
+            <a href="../index.html">Home</a>
+            <div class="dropdown">
+                <button class="dropbtn" onclick="window.location.href = 
         '/project1/project1.html';">Project1</button>
-        <div class="dropdown-content">
-          <a href="/project1/gallery.html">Gallery</a>
+                <div class="dropdown-content">
+                    <a href="/project1/gallery.html">Gallery</a>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <h1>A Showcase of AI-Generated Art for the Aspiring Freelancer</h1>
-    <section>
-      <figure>
-        <h2>#1</h2>
-        <a href="./images/CoverArt1.jpg">
-          <img
-            src="./images/CoverArt1.jpg"
-            alt="Image of a pale, red-headed woman wearing a tattered green dress, who has a haunted expression and green, bleeding mascara."
-            width="100px"
-          />
-        </a>
-        <figcaption>Source: Midjourney AI</figcaption>
-      </figure>
-      <figure>
-        <h2>#2</h2>
-        <a href="./images/BookCover2.jpg">
-          <img
-            src="./images/BookCover2.jpg"
-            alt="Book Cover with the title, 'The Lost Forgotten' by Ashley McBride, depicting a filthy young woman with bleeding mascara."
-            width="100px"
-          />
-        </a>
-        <figcaption>Source: Midjourney AI</figcaption>
-      </figure>
-      <figure>
-        <h2>#3</h2>
-        <a href="./images/BookCover3.jpg">
-          <img
-            src="./images/BookCover3.jpg"
-            alt="Book Cover with the title, 'The Cool Girl' by Ashley McBride, depicting a tattooed young woman with bleeding mascara."
-            width="100px"
-          />
-        </a>
-        <figcaption>Source: Midjourney AI</figcaption>
-      </figure>
-      <figure>
-        <h2>#4</h2>
-        <a href="./images/BookCover4.jpg">
-          <img
-            src="./images/BookCover4.jpg"
-            alt="Book Cover with the title, 'Penned' by Ashley McBride, depicting a young woman with bleeding mascara laying in what looks like a corn field."
-            width="100px"
-          />
-        </a>
-        <figcaption>Source: Midjourney AI</figcaption>
-      </figure>
-    </section>
-    <br /><br />
-    <footer>Copyright 2023 Jacob Gaskill, CMST 386</footer>
-  </body>
+        <br><br>
+        <h1>A Showcase of AI-Generated Art for the Aspiring Freelancer</h1>
+        <section>
+            <figure>
+                <h2>#1</h2>
+                <a href="./images/CoverArt1.jpg">
+                    <img src="./images/CoverArt1.jpg" alt="Image of a pale, red-headed woman wearing a tattered green dress, who has a haunted expression and green, bleeding mascara." width="100">
+                </a>
+                <figcaption>Source: Midjourney AI</figcaption>
+            </figure>
+            <figure>
+                <h2>#2</h2>
+                <a href="./images/BookCover2.jpg">
+                    <img src="./images/BookCover2.jpg" alt="Book Cover with the title, 'The Lost Forgotten' by Ashley McBride, depicting a filthy young woman with bleeding mascara." width="100">
+                </a>
+                <figcaption>Source: Midjourney AI</figcaption>
+            </figure>
+            <figure>
+                <h2>#3</h2>
+                <a href="./images/BookCover3.jpg">
+                    <img src="./images/BookCover3.jpg" alt="Book Cover with the title, 'The Cool Girl' by Ashley McBride, depicting a tattooed young woman with bleeding mascara." width="100">
+                </a>
+                <figcaption>Source: Midjourney AI</figcaption>
+            </figure>
+            <figure>
+                <h2>#4</h2>
+                <a href="./images/BookCover4.jpg">
+                    <img src="./images/BookCover4.jpg" alt="Book Cover with the title, 'Penned' by Ashley McBride, depicting a young woman with bleeding mascara laying in what looks like a corn field." width="100">
+                </a>
+                <figcaption>Source: Midjourney AI</figcaption>
+            </figure>
+        </section>
+        <br>
+        <br>
+        <footer>Copyright 2023 Jacob Gaskill, CMST 386</footer>
+    </body>
 </html>
