--- a/project1/project1.html
+++ b/project1/project1.html
@@ -23,11 +23,17 @@
       </nav>
     </nav>
   -->
-        <nav class="navbar">
-            <a href="../index.html">Home</a>
-            
-          
-        </nav>
+  <nav class="navbar">
+    <a href="../index.html">Home</a>
+    <div class="dropdown">
+        <button class="dropbtn" onclick="window.location.href = '/project1/project1.html';">
+            Project1
+        </button>
+        <div class="dropdown-content">
+            <a href="/project1/gallery.html">Gallery</a>
+        </div>
+    </div>
+</nav>
         <br>
         <br>
         <h1>A brief Guide to SEO and HTML Best Practices</h1>
