--- a/project1/project1.html
+++ b/project1/project1.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="Gaskill, Project1, Gallery, CMST386, SEO">
+        <meta name="description" content="A brief guide to SEO, answers questions about SEO best practices">
         <link rel="stylesheet" href="../css/style.css">
         <title>Document</title>
     </head>
@@ -23,17 +25,17 @@
       </nav>
     </nav>
   -->
-  <nav class="navbar">
-    <a href="../index.html">Home</a>
-    <div class="dropdown">
-        <button class="dropbtn" onclick="window.location.href = '/project1/project1.html';">
-            Project1
-        </button>
-        <div class="dropdown-content">
-            <a href="/project1/gallery.html">Gallery</a>
-        </div>
-    </div>
-</nav>
+        <nav class="navbar">
+            <a href="../index.html">Home</a>
+            <div class="dropdown">
+                <button class="dropbtn" onclick="window.location.href = '/project1/project1.html';">
+                    Project1
+                </button>
+                <div class="dropdown-content">
+                    <a href="/project1/gallery.html">Gallery</a>
+                </div>
+            </div>
+        </nav>
         <br>
         <br>
         <h1>A brief Guide to SEO and HTML Best Practices</h1>
