--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header><b>Jacob Gaskill, CMST 386</b></header>
     <br>
     <section id=mainsection>
+        <h1>Projects</h1>
     <ul>
        <li> <a href="./project1/project1.html">Project 1</a></li>
        <li> <a href="../project2/">Project 2</a></li>
