--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul>
        <li> <a href="./project1/project1.html">Project 1</a></li>
        <li> <a href="/project2/gaskill_project2_CMST386.docx">Project 2</a></li>
-       <li> <a href="/project3/">Project 3</a></li>
+       <li> <a href="/project3/project3.html">Project 3</a></li>
        <li> <a href="/project4/">Project 4</a></li>
     </ul>
     </section>
