--- a/project3/project3.html
+++ b/project3/project3.html
@@ -1,54 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project 3 - Responsive Design</title>
-  <link rel="stylesheet" href="/project3/css/project3.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-  <header>
-    Project 3
-  </header>
-    <nav>
-        <a href="/index.html">Home</a>
-        <a href="project3.html" class="active">Project 3</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i></a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Project 3 - Responsive Design</title>
+    <link href='/project3/css/InstrumentSerif-Regular.ttf' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/project3/css/project3.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <!--link rel="stylesheet" href="/project3/css/project3.scss" I implemented SASS by downloading a plugin from node.js
+    that compiles the SAS file into CSS on the server side before hosting to the client. It creates a folder that shows the build 
+  info, and keeps the source SASS folder in the /css folder alonside the generated CSS.-->
+  </head>
+  <body>
+    <header>Project 3</header>
+    <ul class="breadcrumb">
+      <li><a href="/index.html">Home</a></li>
+      <li>Project 3</li>
+    </ul> 
+    <nav id="topnav">
+      <a href="/index.html">Home</a>
+      <a href="project3.html" class="active">Project 3</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i
+      ></a>
     </nav>
-  <main>
-    <h1>Why Responsive Design?</h1>
-    <p>Responsive design is the building of websites that can change their layout and appearance based on what size their browser or viewing window is. Typically, this is decided by the size of the screen. In practice, there are usally three sizes used, and they are mobile phone, tablet, and desktop. Many users in the modern day do not have a desktop computer at all, while some have tablets, and most have mobile phones. It is only natural, then, that we as developers cater to the largest audience first, which is mobile. But our websites need also be able to change format based on the user using a tablet or computer to maximize the user's viewing efficiency and aesthetic value. Additionally, mobile friendly sites are often front-loaded in terms of SEO.</p>
-    <h1>Examining 3 Google Analytics Reports</h1>
-    <p></p>
-    <ol>
-      <li><strong>Events Report:</strong> This report shows how many times every event is triggered by how many users. This is a tool 
-        that's value is found in its ability to show which parts of your site are receiving the least traffic and why, and the most traffic
-        and why.</li>
-      <li><strong>Pages and Screen report:</strong>
-        This report tracks how long a website was in focus on a browser or device, how many times a conversion event was triggered,
-        the number of events, total revenue, number of views and on which screens, views per user, and number of users.
-        This tool is valuable because you can use it to look at trends in total time spent on the site, as well as the distribution
-        of screen sizes most often used to access it.</li>
-      <li><strong>Retention Overview Report:</strong> 
-        This report is more of a long term tool that explores the interaction of users across more than one visit. For instance,
-        if a user buys something and then something else a week later, that will be a positive event tracked across a graph, to 
-        show users are returning after their initial transactions You can even group the users by when they visited, so that if you make
-        a change, you can see only those users whose initial vist was after that change to measure its efficacy.</li>
-    </ol>
-    <a href="preprocessing.html" class="call-to-action">Learn Preprocessing</a>
-  </main>
-  <footer>
-    <p>&copy; 2023 Jacob Gaskill CMST 386 - Project 3</p>
-  </footer>
-  <script>function myFunction() {
-    var x = document.getElementById("nav");
-    if (x.className === "nav") {
-      x.className += " responsive";
-    } else {
-      x.className = "nav";
-    }
-  }</script>
-</body>
+    <main>
+      <div class="container">
+        <div class="column"><h1>Why Responsive Design?</h1><p>
+          Responsive design is the building of websites that can change their
+          layout and appearance based on what size their browser or viewing window
+          is. Typically, this is decided by the size of the screen. In practice,
+          there are usally three sizes used, and they are mobile phone, tablet,
+          and desktop. Many users in the modern day do not have a desktop computer
+          at all, while some have tablets, and most have mobile phones. It is only
+          natural, then, that we as developers cater to the largest audience
+          first, which is mobile. But our websites need also be able to change
+          format based on the user using a tablet or computer to maximize the
+          user's viewing efficiency and aesthetic value. Additionally, mobile
+          friendly sites are often front-loaded in terms of SEO.
+        </p></div>
+        <div class="column"><h1>Examining 3 Google Analytics Reports</h1><p>
+          <ol>
+            <li>
+              <strong>Events Report:</strong> This report shows how many times every
+              event is triggered by how many users. This is a tool that's value is
+              found in its ability to show which parts of your site are receiving
+              the least traffic and why, and the most traffic and why.
+            </li>
+            <li>
+              <strong>Pages and Screen report:</strong> This report tracks how long
+              a website was in focus on a browser or device, how many times a
+              conversion event was triggered, the number of events, total revenue,
+              number of views and on which screens, views per user, and number of
+              users. This tool is valuable because you can use it to look at trends
+              in total time spent on the site, as well as the distribution of screen
+              sizes most often used to access it.
+            </li>
+            <li>
+              <strong>Retention Overview Report:</strong> This report is more of a
+              long term tool that explores the interaction of users across more than
+              one visit. For instance, if a user buys something and then something
+              else a week later, that will be a positive event tracked across a
+              graph, to show users are returning after their initial transactions
+              You can even group the users by when they visited, so that if you make
+              a change, you can see only those users whose initial vist was after
+              that change to measure its efficacy.
+            </li>
+          </ol>
+        </p></div>
+      </div>
+      
+      <a href="preprocessing.html" class="call-to-action"
+        >Learn Preprocessing</a
+      >
+    </main>
+    <footer>
+      <p>&copy; 2023 Jacob Gaskill CMST 386 - Project 3</p>
+    </footer>
+    <script>
+      function myFunction() {
+        var x = document.getElementById("topnav");
+        if (x.className === "nav") {
+          x.className += " responsive";
+        } else {
+          x.className = "nav";
+        }
+      }
+    </script>
+  </body>
 </html>
