--- a/project3/project3.html
+++ b/project3/project3.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 3 - Responsive Design</title>
     <link href='/project3/css/InstrumentSerif-Regular.ttf' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/project3/css/project3.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="/project3/css/project3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--link rel="stylesheet" href="/project3/css/project3.scss" I implemented SASS by downloading a plugin from node.js
     that compiles the SAS file into CSS on the server side before hosting to the client. It creates a folder that shows the build 
   info, and keeps the source SASS folder in the /css folder alonside the generated CSS.-->
@@ -67,7 +67,7 @@
               that change to measure its efficacy.
             </li>
           </ol>
-        </p></div>
+        </div>
       </div>
       
       <a href="preprocessing.html" class="call-to-action"
