--- a/index.html
+++ b/index.html
@@ -20,4 +20,9 @@
     </ul>
     </section>
 </body>
+<footer>
+    <p>&copy; 2023 Jacob Gaskill CMST 386<a href="/project4/privacy.html">Privacy Policy</a></p>
+    <span id="datetime"></span>
+  </footer>
+  
 </html>
